--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ out/
 .kotlin
 
 ### IntelliJ IDEA ###
-.idea/artifacts/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -42,3 +41,5 @@ build/
 
 ### Mac OS ###
 .DS_Store
+/.idea/artifacts/
+/LightControl-linux.tar.gz
